tests/requests/snapshots/login_with_invalid_password@auth_request.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.headers())"
---
(
    401,
    {
        "content-type": "application/json",
        "content-length": "91",
        "x-powered-by": "loco.rs",
        "vary": "origin, access-control-request-method, access-control-request-headers",
        "access-control-allow-origin": "*",
        "access-control-expose-headers": "*",
    },
)
