tests/requests/snapshots/login_with_valid_password@auth_request.snap
---
source: tests/requests/auth.rs
expression: "(response.status_code(), response.headers())"
---
(
    200,
    {
        "set-cookie": "moonlit_binge_jwt=TOKEN; Path=/",
        "hx-redirect": "/",
        "content-length": "0",
        "x-powered-by": "loco.rs",
        "vary": "origin, access-control-request-method, access-control-request-headers",
        "access-control-allow-origin": "*",
        "access-control-expose-headers": "*",
    },
)
